--- a/DanielEscandell_AO_Actividades/Ejercicios/Películas, directores y guionistas.html
+++ b/DanielEscandell_AO_Actividades/Ejercicios/Películas, directores y guionistas.html
@@ -28,16 +28,16 @@
         </thead>
         <tbody>
             <tr>
-                <td>Los otros <img src="https://pics.filmaffinity.com/los_otros_the_others-255113377-mmed.jpg" alt="Los otros" width="35" height="50"></td>
+                <td>Los otros <a href="https://www.filmaffinity.com/es/film370368.html"><img src="https://pics.filmaffinity.com/los_otros_the_others-255113377-mmed.jpg" alt="Los otros" width="35" height="50"></a></td>
                 <td colspan="2" style="text-align: center;">Alejandro Amenábar</td>
             </tr>
             <tr>
-                <td>Abre los ojos<img src="https://pics.filmaffinity.com/abre_los_ojos-562220135-mmed.jpg" alt="Abre los ojos" width="35" height="50"></td>
+                <td>Abre los ojosa <a href="https://www.filmaffinity.com/es/film581441.html"><img src="https://pics.filmaffinity.com/abre_los_ojos-562220135-mmed.jpg" alt="Abre los ojos" width="35" height="50"></a></td>
                 <td>Alejandro Amenábar</td>
                 <td>Mateo Gil</td>
             </tr>
             <tr>
-                <td>Los pájaros<img src="https://pics.filmaffinity.com/alfred_hitchcock_s_the_birds-851609530-mmed.jpg" alt="Los pájaros" width="35" height="50"></td>
+                <td>Los pájaros <a href="https://www.filmaffinity.com/es/film347306.html"><img src="https://pics.filmaffinity.com/alfred_hitchcock_s_the_birds-851609530-mmed.jpg" alt="Los pájaros" width="35" height="50"></a></td>
                 <td>Alfred Hitchcock</td>
                 <td>Evan Hunter</td>
             </tr>
@@ -55,12 +55,12 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>Los otros <img src="https://pics.filmaffinity.com/los_otros_the_others-255113377-mmed.jpg" alt="Los otros" width="35" height="50"></td>
+                    <td>Los otros<a href="https://www.filmaffinity.com/es/film370368.html"><img src="https://pics.filmaffinity.com/los_otros_the_others-255113377-mmed.jpg" alt="Los otros" width="35" height="50"></a></td>
                     <td>Alejandro Amenábar</td>
                     <td>Alejandro Amenábar</td>
                 </tr>
                 <tr>
-                    <td>Abre los ojos<img src="https://pics.filmaffinity.com/abre_los_ojos-562220135-mmed.jpg" alt="Abre los ojos" width="35" height="50"></td>
+                    <td>Abre los ojos <a href="https://www.filmaffinity.com/es/film581441.html"><img src="https://pics.filmaffinity.com/abre_los_ojos-562220135-mmed.jpg" alt="Abre los ojos" width="35" height="50"></a></td>
                     <td>Alejandro Amenábar</td>
                     <td>Mateo Gil</td>
                 </tr>
