--- a/DanielEscandell_AO_Actividades/Ejercicios/EscandellDaniel_AO_Actividad8.6.html
+++ b/DanielEscandell_AO_Actividades/Ejercicios/EscandellDaniel_AO_Actividad8.6.html
@@ -22,7 +22,7 @@
         #primero em{ background: #FFFFCC; padding: .1em; }
 
         /* Todos los elementos "em" de clase "especial" en toda la pagina */
-        .especial { background: #FFCC99; border: 1px solid #FF9900; padding: .1em; }
+        em.especial { background: #FFCC99; border: 1px solid #FF9900; padding: .1em; }
 
         .normal span /* Elementos "span" contenidos en .normal */
         { font-weight: bold; }
