--- a/DanielEscandell_AO_Actividades/Ejercicios/EscandellDaniel_AO_Actividad8.8.html
+++ b/DanielEscandell_AO_Actividades/Ejercicios/EscandellDaniel_AO_Actividad8.8.html
@@ -8,16 +8,27 @@
     <style>
         /*Añadir bordes a la tabla*/
         table, th, td, tr {border: 1px solid; border-collapse: collapse; padding: 5px;}
+        /*Ponerle a la segunda columna el color rojo de fondo*/
         tr td+ td {background-color: red;}
+        /*Ponerle a la tercera columna el color verde de fondo*/
         tr td+ td+ td {background-color: green;}
+        /*Ponerle a la cuarta columna el color azul de fondo*/
         tr td+ td+td+td {background-color: blue;}
+        /*Ponerle a la primera fila el color teal*/
         tr td {color: teal}
+        /*Ponerle a la segunda fila el color rojo*/
         tr+tr td {color:red}
+        /*Ponerle a la tercera fila el color azul*/
         tr+tr+tr td {color: blue}
+        /*Ponerle a la cuarta fila el color naranja*/
         tr+tr+tr+tr td {color: orange}
+        /*Ponerle a la quinta fila el color morado*/
         tr+tr+tr+tr+tr td {color: purple}
+        /*Ponerle a la sexta fila el color oliva*/
         tr+tr+tr+tr+tr+tr td {color:olive}
+        /*Ponerle a la septima fila el color fucsia*/
         tr+tr+tr+tr+tr+tr+tr td {color: fuchsia}
+        /*Ponerle a la octava fila el color verde*/
         tr+tr+tr+tr+tr+tr+tr+tr td {color:green}
     </style>
   </head>
