--- a/DanielEscandell_AO_Actividades/Ejercicios/ResueltoActividad8.10.html
+++ b/DanielEscandell_AO_Actividades/Ejercicios/ResueltoActividad8.10.html
@@ -3,34 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Diseños con float</title>
+    <title>Document</title>
     <style>
 
-/*Aplicar el color blanco, centrar el texto y ponerle sombra a todo*/
-*{color: white; text-align: center; text-shadow: 1px 3px black;}
-/*Ponerle anchura 20%, float a la izq y altura de 100px*/
 .w-20{width: 20%;
 float: left;
 height: 100px;}
-/*Ponerle anchura 30%, float a la izq y altura de 100px*/
+
 .w-30{width: 30%;
 float: left;
 height: 100px;}
-/*Ponerle anchura 40%, float a la izq y altura de 100px*/
+
 .w-40{width: 40%;
 float: left;
 height: 100px;}
-/*Ponerle anchura 60%, float a la izq y altura de 100px*/
+
 .w-60{width: 60%;
 float: left;
 height: 100px;}
-/*Ponerle anchura 100%, float a la iqz y altura de 50px*/
+
 .tres {
     width: 100%;
     float: left;
     height: 50px;
 }
-/*Colores*/
+
+
+/*COlores*/
 .rojo {
 background-color: red;
 }
@@ -82,10 +81,10 @@ background-color: blueviolet;
 </head>
 <body>
     <div class="w-20 rojo">
-        <h2>uno</h2>
+        <h2>1</h2>
     </div>
     <div class="w-20 azul">
-        <h2>dos</h2>
+        <h2>2</h2>
     </div>
     <div class="w-20">
         <div class="tres aqua">
@@ -96,34 +95,34 @@ background-color: blueviolet;
         </div>
     </div>
     <div class="w-40 beige">
-        <h2>cuatro</h2>
+        <h2>4</h2>
     </div>
     <div class="w-60 menta">
-        <h2>cinco</h2>
+        <h2>5</h2>
     </div>
     <div class="w-20 marron">
-        <h2>seis</h2>
+        <h2>6</h2>
     </div>
     <div class="w-20 azul">
-        <h2>siete</h2>
+        <h2>7</h2>
     </div>
     <div class="w-20 verde" style="height:200px">
-        <h2>ocho</h2>
+        <h2>8</h2>
     </div>
     <div class="w-20 salmon">
-        <h2>nueve</h2>
+        <h2>9</h2>
     </div>
     <div class="w-60 naranja">
-        <h2>diez</h2>
+        <h2>10</h2>
     </div>
     <div class="w-20 teal">
-        <h2>once</h2>
+        <h2>11</h2>
     </div>
     <div class="w-30 beige">
-        <h2>doce</h2>
+        <h2>12</h2>
     </div>
     <div class="w-30 lila">
-        <h2>trece</h2>
+        <h2>13</h2>
     </div>
 </body>
 </html>
