--- a/DanielEscandell_AO_Actividades/Ejercicios/ActividadRepaso/pagina2.html
+++ b/DanielEscandell_AO_Actividades/Ejercicios/ActividadRepaso/pagina2.html
@@ -17,7 +17,7 @@
     <div class="imagenes">
         <img src="Imagenes/fc-barcelona-celebrando-laliga.jpg" alt="El Barça celebrando">
         <img src="Imagenes/lamine.jpeg" alt="Lamine gol a Francia">
-        <img src="Imagenes/raphinha balon de oro.png" alt="Raphinha balon de oro">
+        <img src="Imagenes/Raphinha.jpeg" alt="Raphinha celebrando">
     </div>
 </body>
 </html>
