--- a/DanielEscandell_AO_Actividades/Ejercicios/ActividadRepaso/pagina3.html
+++ b/DanielEscandell_AO_Actividades/Ejercicios/ActividadRepaso/pagina3.html
@@ -8,5 +8,26 @@
 </head>
 <body>
     <div class="indice"><a href="index.html">Inicio</a> <a href="pagina2.html">Galería</a> <a href="pagina3.html"> Tabla</a></div>
+    <h1>Ejemplo de tabla</h1>
+    <p>Aqui tienes una tabla con datos de ejemplo:</p>
+    <table>
+        <tbody>
+        <tr>
+            <th>Nombre</th>
+            <th>Edad</th>
+            <th>País</th>
+        </tr>
+        <tr>
+            <td>Manolo</td>
+            <td>48</td>
+            <td>Angola</td>
+        </tr>
+        <tr>
+            <td>Fernando</td>
+            <td>33</td>
+            <td>España</td>
+        </tr>
+        </tbody>
+    </table>
 </body>
 </html>
