--- a/2025-26/APPWEB 2025-26/Tasca 1.8/Tasca 1.8.html
+++ b/2025-26/APPWEB 2025-26/Tasca 1.8/Tasca 1.8.html
@@ -21,7 +21,7 @@
         </tr>
         <tr>
             <td rowspan="3">1</td>
-            <td><a href="#">Introducción</a></td>
+            <td><a href="#" target="_blank">Introducción</a></td>
             <td>1-5</td>
         </tr>
         <tr>
