--- a/2025-26/APPWEB 2025-26/Tasca 1.11/Tasca 1.11.html
+++ b/2025-26/APPWEB 2025-26/Tasca 1.11/Tasca 1.11.html
@@ -7,5 +7,50 @@
     <link rel="stylesheet" href="Tasca 1.11.css">
 </head>
 <body>
+    <h1>Formulario de Alta</h1>
+    <form action="#" method="post">
+        <fieldset>
+            <div class="nombre">
+                <label for="Nombreyapellidos" class="titulos">Nombre y apellidos</label>
+                <label for="*" class="ast">*</label><br>
+                <input type="text" class="basic-input" placeholder="Nombre"><br>
+                <input type="text" class="basic-input" placeholder="Primer Apellido"><br>
+                <input type="text" class="basic-input" placeholder="Segundo Apellido"><br>
+            </div>
+            <div class="direccion">
+                <label for="Direccion" class="titulos">Dirección</label>
+                <label for="*" class="ast">*</label><br>
+                <input type="text" class="basic-input" placeholder="Calle, número, piso, puerta"><br>
+                <input type="text" class="basic-input" placeholder="Código postal"> <br>
+                <input type="text" class="basic-input" placeholder="Municipio"><br>
+                <select name="Provincia" id="lista">
+                    <option value=""></option>
+                    <option value="Santjordi">Sant Jordi</option>
+                    <option value="ibiza">Ibiza</option>
+                    <option value="santantonio">Sant Antoni</option>
+                </select>
+                <select name="Pais" id="lista">
+                    <option value=""></option>
+                    <option value="España">España</option>
+                    <option value="Portugal">Portugal</option>
+                    <option value="Italia">Italia</option>
+                </select>
+            </div>
+            <div class="email">
+                <label for="Email" class="titulos">Email</label>
+                <label for="*" class="ast">*</label><br>
+                <input type="text" class="basic-input" placeholder="Email">
+            </div>
+            <div class="telefono">
+                <label for="Telefono" class="titulos">Teléfono</label>
+                <label for="*" class="ast">*</label><br>
+                <input type="text" class="basic-input" placeholder="Fijo">
+                <input type="text" class="basic-input" placeholder="Móvil">
+            </div>
+            <div>
+                <input type="submit" value="Enviar">
+            </div>
+        </fieldset>
+    </form>
 </body>
 </html>
