--- a/2025-26/APPWEB 2025-26/Tasca 1.13/Tasca 1.13.html
+++ b/2025-26/APPWEB 2025-26/Tasca 1.13/Tasca 1.13.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pizzeria</title>
-    <link rel="stylesheet" href="Tasca 1.13.css" />
+    <link rel="stylesheet" href="CSS/Tasca 1.13.css" />
   </head>
   <body>
     <div class="cabecera">
@@ -20,20 +20,20 @@
     </div>
     <div class="imagenes">
         <div>
-        <img src="Pizza1.jpg" alt="Pizza" />
+        <img src="Imagenes/Pizza1.jpg" alt="Pizza" />
         <h3>Pizza</h3>
         </div>
         <div>
-        <img src="tiramisu.jpg" alt="Tiramisu" />
+        <img src="Imagenes/tiramisu.jpg" alt="Tiramisu" />
         <h3>Tiramisu</h3>
         </div>
         <div>
-        <img src="provolone-tomate-horno-3.jpg" alt="Provolone" />
+        <img src="Imagenes/provolone-tomate-horno-3.jpg" alt="Provolone" />
         <h3>Provolone</h3>
         </div>
     </div>
     <div class="descarga">
-      <a href="#" download="#">Descarga nuestra carta</a>
+      <a href="Archivos/Menú de pizzeria simple beige.pdf" download>Descarga nuestra carta</a>
     </div>
     <div>
       <footer class="piedepagina">
