--- a/2025-26/APPWEB 2025-26/Tasca 1.13/Tasca 1.13contacta.html
+++ b/2025-26/APPWEB 2025-26/Tasca 1.13/Tasca 1.13contacta.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacta</title>
-    <link rel="stylesheet" href="Tasca 1.13.css">
+    <link rel="stylesheet" href="CSS/Tasca 1.13.css">
 </head>
 <body>
     <div class="cabecera">
@@ -15,7 +15,22 @@
         <a href="Tasca 1.13contacta.html">Contacta</a>
       </nav>
     </div>
-    
+    <div class="pedido">
+      <h2>Contacta</h2>
+      <form action="#">
+        <fieldset>
+          <label for="Nombre">Nombre:</label><br>
+          <input type="text" required><br>
+          <label for="Telefono">Telefono:</label><br>
+          <input type="text" required><br>
+          <label for="Correo">Correo:</label><br>
+          <input type="text" required><br>
+          <label for="Comentarios adicionales">Comentarios adicionales:</label><br>
+          <textarea name="Comentarios" id="Comentarios"></textarea><br>
+          <input type="submit" value="Enviar">
+        </fieldset>
+      </form>
+    </div>
     <div>
       <footer class="piedepagina">
         <a href="#">Aviso legal</a> <a href="#">Cookies</a>
