--- a/2025-26/APPWEB 2025-26/Tasca 1.13/Tasca 1.13pedido.html
+++ b/2025-26/APPWEB 2025-26/Tasca 1.13/Tasca 1.13pedido.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Realizar Pedido</title>
-    <link rel="stylesheet" href="Tasca 1.13.css">
+    <link rel="stylesheet" href="CSS/Tasca 1.13.css">
 </head>
 <body>
     <div class="cabecera">
@@ -15,7 +15,7 @@
         <a href="Tasca 1.13contacta.html">Contacta</a>
       </nav>
     </div>
-    <div class="Pedido">
+    <div class="pedido">
       <h2>Realizar Pedido</h2>
       <form action="#">
         <fieldset>
