--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -31,7 +31,7 @@
     <div  class="grid-container">
         <div class="juegos">
       <a href="blackjack.html"
-        ><img src="Imagenes/BlackJack.png" alt="BlackJack" />
+        ><img src="Imagenes/blackjack.png" alt="BlackJack" />
         <h3>Blackjack</h3>
         <h4>Disfruta de nuestro BlackJack en linea.</h4></a
       >
