--- a/2025-26/APPWEB 2025-26/JS/Actividades/EscandellDaniel_AW_Actividad2.4.html
+++ b/2025-26/APPWEB 2025-26/JS/Actividades/EscandellDaniel_AW_Actividad2.4.html
@@ -266,6 +266,8 @@
               for (let i = 0; i< caja.length; i++)
               caja[i].addEventListener('mouseenter',() => {
               caja[i].style.display = 'none'
+              caja[i].addEventListener('mouseleave',() => {
+              caja[i].style.display = 'inline-block'
             });
             }
             // =========== EJERCICIOS ADICIONALES ===========
